# finite-difference-pde-solver

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
examples/: feature_tour.ipynb  heat_2d.py  heat_solver.py  poisson_2d.py  run_demo.py
finite_differences/: __init__.py  bc.py  field.py  grid.py  operators.py  pde.py  poisson.py  solvers.py  terms.py  time_integrators.py  utils.py
finite_differences.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: gaussian_blur.ipynb  heat_demo.ipynb  poisson_demo.ipynb
tests/: test_bc.py  test_grid.py  test_heat.py  test_operators.py  test_pde.py  test_poisson.py  test_utils.py
webapp/: README.md  app.py  initial_conditions.py  solvers.py
webapp/backend/: expr.py  main.py  pde_builder.py  requirements.txt  schemas.py
webapp/backend/tests/: conftest.py  test_api.py  test_expr.py
webapp/frontend/: index.html
webapp/frontend/src/: App.tsx  app.css  builderState.ts  index.css  useTheme.ts
webapp/frontend/src/api/: client.ts  types.ts
webapp/frontend/src/components/builder/: BoundaryConditionSection.tsx  GridSection.tsx  InitialConditionSection.tsx  IntegrationSection.tsx  PresetsBar.tsx  TermRow.tsx  TermsSection.tsx  TimeOrderSection.tsx
webapp/frontend/src/components/ui/: Button.tsx  Card.tsx  Field.tsx  NumberField.tsx  SegmentedControl.tsx  Select.tsx
webapp/frontend/src/components/viewer/: AnimationPlayer.tsx  Heatmap2DCanvas.tsx  Line1DCanvas.tsx  colormap.ts
