[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finite_differences"
version = "0.1.0"
description = "Modular finite-difference PDE solver (1D/2D)"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]
